--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
 
   <body>
@@ -31,18 +35,18 @@
       <section class="container  p-4 mt-4 mb-4">
         <article class="d-flex w-100 justify-content-between align-items-center flex-wrap text-start text-white flex-row">
           <div class="d-flex flex-column justify-content-start gap-3">
-            <div>
-              <h3>¿Donde nos encontramos?</h3>
-              <p>Estamos ubicados en Cordoba, Colon 6777</p>
-              <p>A la derecha tienes un mapa donde se especifica mejor!</p>
+            <div >
+              <h3 class="map-section-title">¿Donde nos encontramos?</h3>
+              <p class="map-section-text">Estamos ubicados en Cordoba, Colon 6777</p>
+              <p class="map-section-text">A la derecha tienes un mapa donde se especifica mejor!</p>
             </div>
-            <div>
-              <h3>¿Que horarios manejamos?</h3>
+            <div >
+              <h3 class="map-section-title">¿Que horarios manejamos?</h3>
               <div class="d-flex justify-content-start align-items-center text-start w-100">
-                <svg xmlns="http://www.w3.org/2000/svg" class="map-section-clock" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-2 h-2">
+                <svg xmlns="http://www.w3.org/2000/svg" class="map-section-clock map-section-text" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-2 h-2">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                 </svg>
-                <p>Estamos de 8hs a 13hs!</p>
+                <p class="map-section-text">Estamos de 8hs a 13hs!</p>
               </div>
             </div>            
           </div>
